# opensearch-migrations

./: .cfnlintrc.yaml  .codecov.yml  .flake8  .gitignore  .whitesource  AGENTS.md  DEVELOPER_GUIDE.md  Dockerfile.gcs-overlay  Jenkinsfile  LOCAL_MIGRATION_TEST_GUIDE.md  MAINTAINERS.md  PLAN.md  README.md  RFS_METADATA_MIGRATION_INVESTIGATION.md  SECURITY.md  TESTING.md  TestOrganization.md  bootstrap-kiro-agent.sh  build.gradle  cloudbuild.yaml  coverage_report_d7b7d4ae3.json  docker-compose.local.yml  docker-compose.yml  formatter.xml  gradle.properties  haproxy.cfg  images.txt  implementation_plan.md  install_githooks.sh  kafkaAuthWiringPlan.md  pr_2032_review_responses.md  results.md  settings.gradle  sonar-project.properties  test-mirrorToEcr.sh  update-values.yaml  whitesource.config
AIAdvisor/skills/solr-opensearch-migration-advisor/: .env.example  README.md  SKILL.md  pyproject.toml
AIAdvisor/skills/solr-opensearch-migration-advisor/.claude/skills/migration-advisor/: SKILL.md
AIAdvisor/skills/solr-opensearch-migration-advisor/.claude/skills/solr-opensearch-migration-advisor/: SKILL.md
AIAdvisor/skills/solr-opensearch-migration-advisor/references/: 01-sample-reference.md  01-schema-migration.md  02-query-translation.md  03b-synonyms-and-language.md  04-architecture.md  05-legacy-features.md  05b-legacy-features-continued.md  06-feature-compatibility-matrix.md  08-query-behavior-edge-cases.md  09-sizing-and-performance.md  10-opensearch.md
AIAdvisor/skills/solr-opensearch-migration-advisor/scripts/: pricing_calculator.py  query_converter.py  report.py  skill.py
AIAdvisor/skills/solr-opensearch-migration-advisor/setup/docker/claude/: Dockerfile  README.md  build_image.sh  docker-compose.yml  entrypoint.sh  start_container.sh  stop_container.sh
AIAdvisor/skills/solr-opensearch-migration-advisor/steering/: accuracy.md  authentication.md  incompatibilities.md  index_design.md  query_translation.md  sizing.md  stakeholders.md  transformation-rules.md
AIAdvisor/skills/solr-opensearch-migration-advisor/tests/: test_pricing_calculator.py  test_pricing_calculator_coverage.py  test_query_converter.py  test_report.py  test_schema_converter.py  test_skill.py  test_skill_coverage.py  test_storage.py
AIAdvisor/skills/solr-opensearch-migration-advisor/tests/evals/: README.md  claude_requests.py  eval.yaml  solr-6-schema.xml
deployment/k8s/aws/cli/: .gitignore  AMBER_IDIOMS.md  Cargo.toml  DEPENDENCIES.md  EXTENSIBILITY.md  LICENSE  MODULE_APIS.md  Makefile  PORT_STATUS.md  README.md  build.rs  install.sh  install.sh.template  latest.json.template  rust-toolchain.toml
deployment/k8s/aws/cli/amber-tui/: .gitignore  AMBER_IDIOMS.md  MODULE_APIS.md  Makefile
deployment/k8s/aws/cli/amber-tui/src/: artifacts.ab  build.ab  cfn_outputs.ab  common.ab  console.ab  core.ab  dashboard.ab  discover.ab  helm_ctx.ab  helm_install.ab  helm_recover.ab  log.ab  main.ab  manifest.ab  resume.ab  state.ab  std.ab  timeline.ab  ui.ab  version.ab  wizard.ab
deployment/k8s/aws/cli/amber-tui/test/: test_agent.ab  test_artifacts.ab  test_cfn_deploy.ab  test_cleanup.ab  test_common.ab  test_console.ab  test_core.ab  test_discover.ab  test_helm_install.ab  test_helm_recover.ab  test_install.ab  test_manifest.ab  test_pack.ab  test_state.ab  test_std.ab  test_ui.ab  test_version.ab  test_wizard.ab
deployment/k8s/aws/cli/lib/: _common.sh  agent.sh  artifacts.sh  build.sh  cfn.sh  cleanup.sh  console.sh  crane.sh  dashboard.sh  diag.sh  discover.sh  helm.sh  install_tools.sh  log.sh  manifest.sh  pack.sh  resume.sh  state.sh  std.sh  term.sh  timeline.sh  ui.sh  version.sh  wizard.sh
deployment/k8s/aws/cli/skills/: Startup.md
deployment/k8s/aws/cli/src/: agent.ab  artifacts.ab  build.ab  cfn_deploy.ab  cleanup.ab  common.ab  console.ab  crane.ab  dashboard.ab  discover.ab  helm_diag.ab  helm_install.ab  helm_recover.ab  install.ab  install_tools.ab  lib.rs  log.ab  main.ab  main.rs  manifest.ab  pack.ab  resume.ab  state.ab  std.ab  term.ab  timeline.ab  ui.ab  wizard.ab
deployment/k8s/aws/cli/src/command/: app.rs  cli.rs  mod.rs  pack_cmd.rs
deployment/k8s/aws/cli/src/core/: config.rs  error.rs  log.rs  mod.rs  runner.rs  state.rs  util.rs
deployment/k8s/aws/cli/src/domain/: agent.rs  artifact.rs  cfn.rs  crane.rs  discover.rs  ecr.rs  helm.rs  manifest.rs  mirror.rs  mod.rs  oci.rs  pack.rs  timeline.rs  version.rs
deployment/k8s/aws/cli/test/: TEST_GUIDE.md  __cb.sh  lint-bash32.sh  run-bats.sh  test_agent.ab  test_agent_handoff.ab  test_agent_handoff.bats  test_agent_setup.ab  test_agent_units.ab  test_artifacts.ab  test_artifacts.bats  test_build.ab  test_build_gate.ab  test_build_path.bats  test_build_seams.ab  test_cfn_dashboard.bats  test_cfn_deploy.ab  test_cfn_deploy_decision.ab  test_cfn_deploy_params.ab  test_cfn_outputs.ab  test_cfn_outputs.bats  test_cleanup.ab  test_cleanup_panel.bats  test_common.ab  test_console.ab  test_console_cmd.ab  test_console_diag.ab  test_console_exec.ab  test_core.ab  test_crane.ab  test_crane_dst.bats  test_crane_retry.bats  test_dashboard.ab  test_deploy_e2e.ab  test_discover.ab  test_discover.bats  test_ecr_login_diag.bats  test_helm_ctx.ab  test_helm_diag.ab  test_helm_diag_dump.ab  (+53 more)
deployment/k8s/aws/cli/tests/: cli_dispatch.rs  deploy_pipeline.rs  pack_and_manifest.rs
fuse-lucene/: Cargo.toml  Dockerfile  entrypoint.sh
fuse-lucene/deploy/: build-and-test.sh  fuse-sidecar-patch.yaml  test-e2e-minikube.sh  test-pod.yaml
fuse-lucene/src/: fs.rs  lib.rs  main.rs  metadata.rs  repo.rs  smile.rs
fuse-lucene/tests/: integration_test.rs
tui/: .gitignore  Cargo.toml  build.gradle.kts
tui/release/: build.gradle.kts  install.ps1.template  install.sh.template
tui/release/bundle/: README.md
tui/src/: lib.rs  main.rs  version.rs
tui/src/domain/: app.rs  confirmation.rs  message.rs  mod.rs  runtime.rs
tui/src/extension/: cluster.rs  config.rs  log_streamer.rs  mod.rs  op.rs  workflow.rs
tui/src/tui/: mod.rs  render.rs  widgets.rs
tui/tests/: extension_invariants.rs  runtime_invariants.proptest-regressions  runtime_invariants.rs
(+7039 files in other folders)
