[package]
name = "snapshot-fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
fuse3 = { version = "0.9", features = ["tokio-runtime"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util"] }
bytes = "1"
futures-util = "0.3"

[profile.release]
lto = true
strip = true
