[package]
name = "migration-assistant"
version = "0.0.0-dev"
edition = "2021"
# Build/test against 1.96.0 (see rust-toolchain.toml). Above every dependency
# floor (ratatui 0.30 needs >=1.88).
rust-version = "1.96"
description = "OpenSearch Migration Assistant CLI"
license = "Apache-2.0"
default-run = "migration-assistant"

[[bin]]
name = "migration-assistant"
path = "src/main.rs"

[lib]
name = "migration_assistant"
path = "src/lib.rs"

# Dependencies are kept deliberately minimal — see DEPENDENCIES.md.
#   ratatui     the TUI (pulls crossterm, the terminal backend).
#   serde(+_json)  parse/emit manifest.json + state.json.
# The CLI parser, error type, and all string/JSON-shape logic are hand-rolled
# (no clap / anyhow / thiserror / regex), and external-tool calls go through a
# small CommandRunner seam rather than helper crates.
[dependencies]
# ratatui 0.30 is a modular workspace. We opt out of default features and pull
# only what this CLI uses: std, the crossterm backend, the layout cache (perf),
# and the widget set. This drops termion/termwiz/macros/palette/serde/calendar
# and their transitive deps (csscolorparser, fancy-regex, deltae, …).
ratatui = { version = "0.30.1", default-features = false, features = [
    "std",
    "crossterm",
    "layout-cache",
    "all-widgets",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = 0
incremental = false
