[package]
name = "migration-assistant"
version = "0.0.0-dev"
edition = "2021"
# Build/test against 1.96.0 (see rust-toolchain.toml). Above every dependency
# floor (ratatui 0.30 needs >=1.88).
rust-version = "1.96"
description = "OpenSearch Migration Assistant CLI"
license = "Apache-2.0"
default-run = "migration-assistant"

[[bin]]
name = "migration-assistant"
path = "src/main.rs"

[lib]
name = "migration_assistant"
path = "src/lib.rs"

# Dependencies are kept deliberately minimal — see DEPENDENCIES.md.
#   ratatui        the TUI (pulls crossterm, the terminal backend).
#   serde(+_json)  parse/emit manifest.json + state.json.
#   oci-client     native OCI image copy (ORAS project).
#   aws-sdk-ecr    native ECR repo management + auth.
#   aws-sdk-sts    native STS identity.
#   aws-config     SDK credential + region resolution.
#   tokio          async runtime for SDK/OCI calls (bridged to sync via block_on).
# The CLI parser, error type, and all string/JSON-shape logic are hand-rolled
# (no clap / anyhow / thiserror / regex), and external-tool calls go through a
# small CommandRunner seam rather than helper crates.
[dependencies]
# ratatui 0.30 is a modular workspace. We opt out of default features and pull
# only what this CLI uses: std, the crossterm backend, the layout cache (perf),
# and the widget set. This drops termion/termwiz/macros/palette/serde/calendar
# and their transitive deps (csscolorparser, fancy-regex, deltae, …).
ratatui = { version = "0.30.1", default-features = false, features = [
    "std",
    "crossterm",
    "layout-cache",
    "all-widgets",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OCI image copy (ORAS project).
oci-client = { version = "0.17", default-features = false, features = ["rustls-tls"] }
# AWS SDK for ECR + STS.
aws-config = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-ecr = { version = "1", default-features = false }
aws-sdk-sts = { version = "1", default-features = false }
# Async runtime for the SDK (used only as block_on bridges in the sync CLI).
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = 0
incremental = false
